@@ -1,3 +1,4 @@
+* Allow keyword action for all models
 * Add sortable_values in tools
 * Remove default colors on graph and calendar
 * Add model, record and records attributes on Wizard
